--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/graphdeco-inria/gaussian-splatting
 [submodule "submodules/RoMa"]
 	path = submodules/RoMa
-	url = git@github.com:Parskatt/RoMa.git
+	url = https://github.com/Parskatt/RoMa.git
 [submodule "submodules/depth-anything-v2"]
 	path = submodules/depth-anything-v2
 	url = https://github.com/DepthAnything/Depth-Anything-V2.git
